- Added all the subnavigations.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -210,6 +210,26 @@
         </li>
       </ul>
     </div>
+    <div class="flyout__column">
+      <ul class="flyout__group">
+        <li class="flyout__group-item" data-site-category="2">
+          <a href="#" class="secondary-list-item--flat">Major Cateogry</a>
+        </li>
+        <li class="flyout__group-item" data-site-subcategory="2">
+          <a href="#" class="tertiary-list-item">Major Sub-category 1</a>
+        </li>
+
+        <li class="flyout__group-item" data-site-category="3">
+          <a href="#" class="secondary-list-item">Minor Category</a>
+        </li>
+        <li class="flyout__group-item" data-site-subcategory="3">
+          <a href="#" class="tertiary-list-item">Minor Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item" data-site-subcategory="3">
+          <a href="#" class="tertiary-list-item tertiary-list-item--all">Minor See all</a>
+        </li>
+      </ul>
+    </div>
   </div>
   <div class="flyout__container" data-site-outlet="1">
     <div class="flyout__column flyout__column-stamp">
