- home stretch on navigation.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -475,7 +475,9 @@
 <!-- START: Site Navigation Bar Mobile Flyout -->
 <div class="flyout__mobile-overlay" data-site-m-close></div>
 <div class="flyout__mobile-nav" data-site-m-root>
-
+  <div class="flyout__primary-nav" data-site-m-outlet="primary"></div>
+  <div class="flyout__primary-nav" data-site-m-outlet="secondary"></div>
+  <div class="flyout__primary-nav" data-site-m-outlet="tertiary"></div>
 </div>
 <!-- END: Site Navigation Bar Mobile Flyout -->
 
