--- a/src/public/index.html
+++ b/src/public/index.html
@@ -255,21 +255,41 @@
     </div>
     <div class="flyout__column">
       <ul class="flyout__group">
-        <li class="flyout__group-item">
-          <a href="#" class="secondary-list-item--flat">Category 1</a>
+        <li class="flyout__group-item" data-site-category="0">
+          <a href="#" class="secondary-list-item--flat">Major Accessories</a>
         </li>
-        <li class="flyout__group-item">
-          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        <li class="flyout__group-item" data-site-subcategory="0">
+          <a href="#" class="tertiary-list-item">Major Accessories Sub-category 1</a>
         </li>
 
-        <li class="flyout__group-item">
-          <a href="#" class="secondary-list-item">Category 2</a>
+        <li class="flyout__group-item" data-site-category="1">
+          <a href="#" class="secondary-list-item">Minor Category</a>
         </li>
-        <li class="flyout__group-item">
-          <a href="#" class="tertiary-list-item">Sub-category 1</a>
+        <li class="flyout__group-item" data-site-subcategory="1">
+          <a href="#" class="tertiary-list-item">Minor Sub-category 1</a>
         </li>
-        <li class="flyout__group-item">
-          <a href="#" class="tertiary-list-item tertiary-list-item--all">See all</a>
+        <li class="flyout__group-item" data-site-subcategory="1">
+          <a href="#" class="tertiary-list-item tertiary-list-item--all">Minor See all</a>
+        </li>
+      </ul>
+    </div>
+    <div class="flyout__column">
+      <ul class="flyout__group">
+        <li class="flyout__group-item" data-site-category="2">
+          <a href="#" class="secondary-list-item--flat">Major Cateogry</a>
+        </li>
+        <li class="flyout__group-item" data-site-subcategory="2">
+          <a href="#" class="tertiary-list-item">Major Sub-category 1</a>
+        </li>
+
+        <li class="flyout__group-item" data-site-category="3">
+          <a href="#" class="secondary-list-item">Minor Category</a>
+        </li>
+        <li class="flyout__group-item" data-site-subcategory="3">
+          <a href="#" class="tertiary-list-item">Minor Sub-category 1</a>
+        </li>
+        <li class="flyout__group-item" data-site-subcategory="3">
+          <a href="#" class="tertiary-list-item tertiary-list-item--all">Minor See all</a>
         </li>
       </ul>
     </div>
