- FEATURE COMPLETE ONLY BUGS LEFTTT... mmmm guitar here i come!"

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -193,40 +193,40 @@
     <div class="flyout__column">
       <ul class="flyout__group">
         <li class="flyout__group-item" data-site-category="0">
-          <a href="#" class="secondary-list-item--flat">Major Cateogry</a>
+          <a href="#" class="secondary-list-item--flat">Major Strings Cateogry</a>
         </li>
         <li class="flyout__group-item" data-site-subcategory="0">
-          <a href="#" class="tertiary-list-item">Major Sub-category 1</a>
+          <a href="#" class="tertiary-list-item">Major Strings Sub-category 1</a>
         </li>
 
         <li class="flyout__group-item" data-site-category="1">
-          <a href="#" class="secondary-list-item">Minor Category</a>
+          <a href="#" class="secondary-list-item">Minor Strings Category</a>
         </li>
         <li class="flyout__group-item" data-site-subcategory="1">
-          <a href="#" class="tertiary-list-item">Minor Sub-category 1</a>
+          <a href="#" class="tertiary-list-item">Minor Strings Sub-category 1</a>
         </li>
         <li class="flyout__group-item" data-site-subcategory="1">
-          <a href="#" class="tertiary-list-item tertiary-list-item--all">Minor See all</a>
+          <a href="#" class="tertiary-list-item tertiary-list-item--all">Minor Strings See all</a>
         </li>
       </ul>
     </div>
     <div class="flyout__column">
       <ul class="flyout__group">
         <li class="flyout__group-item" data-site-category="2">
-          <a href="#" class="secondary-list-item--flat">Major Cateogry</a>
+          <a href="#" class="secondary-list-item--flat">Major Strings 2 Cateogry</a>
         </li>
         <li class="flyout__group-item" data-site-subcategory="2">
-          <a href="#" class="tertiary-list-item">Major Sub-category 1</a>
+          <a href="#" class="tertiary-list-item">Major Strings 2 Sub-category 1</a>
         </li>
 
         <li class="flyout__group-item" data-site-category="3">
-          <a href="#" class="secondary-list-item">Minor Category</a>
+          <a href="#" class="secondary-list-item">Minor Strings 3 Category</a>
         </li>
         <li class="flyout__group-item" data-site-subcategory="3">
-          <a href="#" class="tertiary-list-item">Minor Sub-category 1</a>
+          <a href="#" class="tertiary-list-item">Minor Strings 3 Sub-category 1</a>
         </li>
         <li class="flyout__group-item" data-site-subcategory="3">
-          <a href="#" class="tertiary-list-item tertiary-list-item--all">Minor See all</a>
+          <a href="#" class="tertiary-list-item tertiary-list-item--all">Minor Strings 3 See all</a>
         </li>
       </ul>
     </div>
@@ -263,33 +263,13 @@
         </li>
 
         <li class="flyout__group-item" data-site-category="1">
-          <a href="#" class="secondary-list-item">Minor Category</a>
+          <a href="#" class="secondary-list-item">Minor Accessories</a>
         </li>
         <li class="flyout__group-item" data-site-subcategory="1">
-          <a href="#" class="tertiary-list-item">Minor Sub-category 1</a>
+          <a href="#" class="tertiary-list-item">Minor Accessories Sub-category 1</a>
         </li>
         <li class="flyout__group-item" data-site-subcategory="1">
-          <a href="#" class="tertiary-list-item tertiary-list-item--all">Minor See all</a>
-        </li>
-      </ul>
-    </div>
-    <div class="flyout__column">
-      <ul class="flyout__group">
-        <li class="flyout__group-item" data-site-category="2">
-          <a href="#" class="secondary-list-item--flat">Major Cateogry</a>
-        </li>
-        <li class="flyout__group-item" data-site-subcategory="2">
-          <a href="#" class="tertiary-list-item">Major Sub-category 1</a>
-        </li>
-
-        <li class="flyout__group-item" data-site-category="3">
-          <a href="#" class="secondary-list-item">Minor Category</a>
-        </li>
-        <li class="flyout__group-item" data-site-subcategory="3">
-          <a href="#" class="tertiary-list-item">Minor Sub-category 1</a>
-        </li>
-        <li class="flyout__group-item" data-site-subcategory="3">
-          <a href="#" class="tertiary-list-item tertiary-list-item--all">Minor See all</a>
+          <a href="#" class="tertiary-list-item tertiary-list-item--all">Minor Accessories See all</a>
         </li>
       </ul>
     </div>
