- some bug fixing.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -17,17 +17,17 @@
   <nav id="global-navigation" class="global-navigation">
     <div class="global-navigation__left">
       <div class="global-navigation__item">
-        <a href="#" class="global-navigation__item-link global-navigation__item-link--active">
+        <a href="javascript:void(0)" class="global-navigation__item-link global-navigation__item-link--active">
           <img src="./img/ernie-ball-black.svg" alt="Ernie Ball Logo">
         </a>
       </div>
       <div class="global-navigation__item">
-        <a href="#" class="global-navigation__item-link">
+        <a href="javascript:void(0)" class="global-navigation__item-link">
           <img src="./img/ebmm-black.svg" alt="Ernie Ball Logo">
         </a>
       </div>
       <div class="global-navigation__item">
-        <a href="#" class="global-navigation__item-link">
+        <a href="javascript:void(0)" class="global-navigation__item-link">
           <img src="./img/sbmm-logo.svg" alt="Ernie Ball Logo">
         </a>
       </div>
@@ -62,17 +62,17 @@
   -->
   <nav id="site-navigation" class="site-navigation">
     <div class="site-navigation__left">
-      <a href="#" class="site-navigation__home">
+      <a href="javascript:void(0)" class="site-navigation__home">
         <img class="ernie-ball-logo" src="./img/eb-logo.svg" alt="Ernie Ball Logo">
       </a>
     </div>
     <div class="site-navigation__center">
       <ul class="site-navigation__list hide-mobile">
         <li data-site-link="0" class="site-navigation__item">
-          <a class="site-navigation__link" href="#">Strings</a>
+          <a class="site-navigation__link" href="javascript:void(0)">Strings</a>
         </li>
         <li data-site-link="1" class="site-navigation__item">
-          <a class="site-navigation__link" href="#">Accessories</a>
+          <a class="site-navigation__link" href="javascript:void(0)">Accessories</a>
         </li>
       </ul>
     </div>
@@ -113,7 +113,7 @@
     <div data-lang-dropdown-list class="lang-select__dropdown">
       <ul class="lang-select__options">
         <li>
-          <a class="lang-select lang-select--anchor" href="#">
+          <a class="lang-select lang-select--anchor" href="javascript:void(0)">
           <span class="lang-select__flag">
             <img src="./img/usa-flag.png" alt="usa flag">
           </span>
@@ -123,7 +123,7 @@
           </a>
         </li>
         <li>
-          <a class="lang-select lang-select--anchor" href="#">
+          <a class="lang-select lang-select--anchor" href="javascript:void(0)">
           <span class="lang-select__flag">
               <img src="./img/usa-flag.png" alt="usa flag">
           </span>
@@ -133,7 +133,7 @@
           </a>
         </li>
         <li>
-          <a class="lang-select lang-select--anchor" href="#">
+          <a class="lang-select lang-select--anchor" href="javascript:void(0)">
             <span class="lang-select__flag">
               <img src="./img/usa-flag.png" alt="usa flag">
             </span>
@@ -143,7 +143,7 @@
           </a>
         </li>
         <li>
-          <a class="lang-select lang-select--anchor" href="#">
+          <a class="lang-select lang-select--anchor" href="javascript:void(0)">
             <span class="lang-select__flag">
               <img src="./img/usa-flag.png" alt="usa flag">
             </span>
@@ -153,7 +153,7 @@
           </a>
         </li>
         <li>
-          <a class="lang-select lang-select--anchor" href="#">
+          <a class="lang-select lang-select--anchor" href="javascript:void(0)">
           <span class="lang-select__flag">
             <img src="./img/usa-flag.png" alt="usa flag">
           </span>
@@ -194,19 +194,19 @@
       <div class="flyout__column flyout__column-stamp">
         <ul class="flyout__group">
           <li class="flyout__group-item">
-            <a href="#" class="secondary-list-item--flat">New Releases</a>
+            <a href="javascript:void(0)" class="secondary-list-item--flat">New Releases</a>
           </li>
           <li class="flyout__group-item">
-            <a href="#" class="secondary-list-item--flat">Best Sellers</a>
+            <a href="javascript:void(0)" class="secondary-list-item--flat">Best Sellers</a>
           </li>
           <li class="flyout__group-item">
-            <a href="#" class="secondary-list-item--flat">10% off guitar picks</a>
+            <a href="javascript:void(0)" class="secondary-list-item--flat">10% off guitar picks</a>
           </li>
           <li class="flyout__group-item">
-            <a href="#" class="secondary-list-item--flat">Tremolo Pedal Make waves!</a>
+            <a href="javascript:void(0)" class="secondary-list-item--flat">Tremolo Pedal Make waves!</a>
           </li>
           <li>
-            <a href="#" class="secondary-list-item--flat promo-item">
+            <a href="javascript:void(0)" class="secondary-list-item--flat promo-item">
               <img src="./img/pedal.png" alt="">
             </a>
           </li>
@@ -215,40 +215,40 @@
       <div class="flyout__column">
         <ul class="flyout__group">
           <li class="flyout__group-item" data-site-category="0">
-            <a href="https://www.google.com" class="secondary-list-item--flat">Major Strings Cateogry</a>
+            <a href="javascript:void(0)" class="secondary-list-item--flat">Major Strings Cateogry</a>
           </li>
           <li class="flyout__group-item" data-site-subcategory="0">
-            <a href="#" class="tertiary-list-item">Major Strings Sub-category 1</a>
+            <a href="javascript:void(0)" class="tertiary-list-item">Major Strings Sub-category 1</a>
           </li>
 
           <li class="flyout__group-item" data-site-category="1">
-            <a href="#" class="secondary-list-item">Minor Strings Category</a>
+            <a href="javascript:void(0)" class="secondary-list-item">Minor Strings Category</a>
           </li>
           <li class="flyout__group-item" data-site-subcategory="1">
-            <a href="#" class="tertiary-list-item">Minor Strings Sub-category 1</a>
+            <a href="javascript:void(0)" class="tertiary-list-item">Minor Strings Sub-category 1</a>
           </li>
           <li class="flyout__group-item" data-site-subcategory="1">
-            <a href="#" class="tertiary-list-item tertiary-list-item--all">Minor Strings See all</a>
+            <a href="javascript:void(0)" class="tertiary-list-item tertiary-list-item--all">Minor Strings See all</a>
           </li>
         </ul>
       </div>
       <div class="flyout__column">
         <ul class="flyout__group">
           <li class="flyout__group-item" data-site-category="2">
-            <a href="#" class="secondary-list-item--flat">Major Strings 2 Cateogry</a>
+            <a href="javascript:void(0)" class="secondary-list-item--flat">Major Strings 2 Cateogry</a>
           </li>
           <li class="flyout__group-item" data-site-subcategory="2">
-            <a href="#" class="tertiary-list-item">Major Strings 2 Sub-category 1</a>
+            <a href="javascript:void(0)" class="tertiary-list-item">Major Strings 2 Sub-category 1</a>
           </li>
 
           <li class="flyout__group-item" data-site-category="3">
-            <a href="#" class="secondary-list-item">Minor Strings 3 Category</a>
+            <a href="javascript:void(0)" class="secondary-list-item">Minor Strings 3 Category</a>
           </li>
           <li class="flyout__group-item" data-site-subcategory="3">
-            <a href="#" class="tertiary-list-item">Minor Strings 3 Sub-category 1</a>
+            <a href="javascript:void(0)" class="tertiary-list-item">Minor Strings 3 Sub-category 1</a>
           </li>
           <li class="flyout__group-item" data-site-subcategory="3">
-            <a href="#" class="tertiary-list-item tertiary-list-item--all">Minor Strings 3 See all</a>
+            <a href="javascript:void(0)" class="tertiary-list-item tertiary-list-item--all">Minor Strings 3 See all</a>
           </li>
         </ul>
       </div>
@@ -257,19 +257,19 @@
       <div class="flyout__column flyout__column-stamp">
         <ul class="flyout__group">
           <li class="flyout__group-item">
-            <a href="#" class="secondary-list-item--flat">New Releases</a>
+            <a href="javascript:void(0)" class="secondary-list-item--flat">New Releases</a>
           </li>
           <li class="flyout__group-item">
-            <a href="#" class="secondary-list-item--flat">Best Sellers</a>
+            <a href="javascript:void(0)" class="secondary-list-item--flat">Best Sellers</a>
           </li>
           <li class="flyout__group-item">
-            <a href="#" class="secondary-list-item--flat">10% off guitar picks</a>
+            <a href="javascript:void(0)" class="secondary-list-item--flat">10% off guitar picks</a>
           </li>
           <li class="flyout__group-item">
-            <a href="#" class="secondary-list-item--flat">Tremolo Pedal Make waves!</a>
+            <a href="javascript:void(0)" class="secondary-list-item--flat">Tremolo Pedal Make waves!</a>
           </li>
           <li>
-            <a href="#" class="secondary-list-item--flat promo-item">
+            <a href="javascript:void(0)" class="secondary-list-item--flat promo-item">
               <img src="./img/pedal.png" alt="">
             </a>
           </li>
@@ -278,20 +278,20 @@
       <div class="flyout__column">
         <ul class="flyout__group">
           <li class="flyout__group-item" data-site-category="0">
-            <a href="#" class="secondary-list-item--flat">Major Accessories</a>
+            <a href="javascript:void(0)" class="secondary-list-item--flat">Major Accessories</a>
           </li>
           <li class="flyout__group-item" data-site-subcategory="0">
-            <a href="#" class="tertiary-list-item">Major Accessories Sub-category 1</a>
+            <a href="javascript:void(0)" class="tertiary-list-item">Major Accessories Sub-category 1</a>
           </li>
 
           <li class="flyout__group-item" data-site-category="1">
-            <a href="#" class="secondary-list-item">Minor Accessories</a>
+            <a href="javascript:void(0)" class="secondary-list-item">Minor Accessories</a>
           </li>
           <li class="flyout__group-item" data-site-subcategory="1">
-            <a href="#" class="tertiary-list-item">Minor Accessories Sub-category 1</a>
+            <a href="javascript:void(0)" class="tertiary-list-item">Minor Accessories Sub-category 1</a>
           </li>
           <li class="flyout__group-item" data-site-subcategory="1">
-            <a href="#" class="tertiary-list-item tertiary-list-item--all">Minor Accessories See all</a>
+            <a href="javascript:void(0)" class="tertiary-list-item tertiary-list-item--all">Minor Accessories See all</a>
           </li>
         </ul>
       </div>
