- finished mobile search bar. on to shopping cart.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -84,7 +84,6 @@
       <ul class="site-navigation__list-alt">
         <li class="site-navigation__item-alt">
           <button class="site-navigation__button site-navigation__button-search" data-search-bar-trigger>
-
           </button>
         </li>
         <li class="site-navigation__item-alt">
@@ -108,6 +107,12 @@
     </div>
   </nav>
 
+  <div class="mobile-search" data-search-bar-outlet-mobile>
+    <div class="site-navigation__search">
+      <input type="search" class="site-navigation__search-bar" results=5 data-search-bar-input-m placeholder="What are you looking for? "/>
+      <button class="site-navigation__search-action" data-search-bar-action><img src="./img/search-white.svg" alt=""></button>
+    </div>
+  </div>
   <!-- START: Global Navigation Bar Locale Flyout -->
   <!--  NOTES:
     this links to the global navigation through
